Week-4-terraform/k8s-manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: default
  annotations:
    # Tạo Load Balancer hướng ra Internet (Public)
    alb.ingress.kubernetes.io/scheme: internet-facing
    
    # Định tuyến traffic trực tiếp tới IP của Pod (Tối ưu nhất trên AWS)
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          # Grafana monitoring (đặt trước vì path cụ thể hơn)
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-grafana
                port:
                  number: 80
          # Nginx app (catch-all)
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-nodeport-service
                port:
                  number: 80
